# nexus-core

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MAIN_AGENT_SYSTEM_PROMPT.md  README.md  README_zh.md  alembic.ini  env.example  go.mod  go.sum  main.py  makefile  pyproject.toml  requirements-dev.txt  uv.toml
.github-monitor/: SETUP-COMPLETE.md  SKILL.md  config.json  cron-setup.sh  monitor.sh  status.sh
.github/monitor/: config.json  monitor.sh
.github/workflows/: publish.yml  windows-desktop-build.yml
agent/: __init__.py  app.py  cli.py  requirements.txt
agent/api/: common.py  handler.py  router.py
agent/channels/: __init__.py  channel_register.py  message_sender.py
agent/cli/: __init__.py  command.py
agent/config/: __init__.py  config.py  config_gunicorn.py
agent/core/: config.py
agent/infra/: __init__.py
alembic/: env.py
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh  init-db.sh  nexus-apt-install  nginx.conf
docs/: main-agent-spec.md  message-processing-spec.md  nexus-frontend-room-first-refactor-plan.md  nexus-page-ux-spec.md  nexus-product-doc.md  permission-runtime-spec.md  room-spec.md  session-key-spec.md  skill-spec.md  ui-architecture-audit.md  ui-cleanup-plan.md
scripts/: package-release.sh
tests/: conftest.py
web/: .dockerignore  .gitignore  .npmrc  CLAUDE.md  Dockerfile  README.md  app.html  env.example  eslint.config.mjs  go.mod  index.html  next.config.ts  oauth-callback.html  operation-stage-preview.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts
(+2176 files in other folders)
